<resources>
    <string name="app_name">Taller ListView</string>
    <string name="opciones">Opciones</string>
    <string name="opcion_areas">Areas</string>
    <string name="opcion_volumenes">Volúmenes</string>
    <string name="opcion_operacionesRealizadas">Operaciones Realizadas</string>

    <string name="opcion_cuadrado">Cuadrado</string>
    <string name="opcion_rectangulo">Rectángulo</string>
    <string name="opcion_triangulo">Triángulo</string>
    <string name="opcion_circulo">Círculo</string>

    <string name="opcion_esfera">Esfera</string>
    <string name="opcion_cilindro">Cilindro</string>
    <string name="opcion_cono">Cono</string>
    <string name="opcion_cubo">Cubo</string>


    <string name="nlados">Valor del lado</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="resultado">Resultado</string>

    <string name="error_valor">Debe ingresar este valor</string>

    <string name="area_cuadrado">Area del Cuadrado</string>
    <string name="area_rectangulo">Area del Rectangulo</string>
    <string name="area_triangulo">Area del Triangulo</string>
    <string name="area_circulo">Area del Círculo</string>

    <string name="volumen_esfera">Volumen de la Esfera</string>
    <string name="volumen_cilindro">Volumen del Cilindro</string>
    <string name="volumen_cono">Volumen del Cono</string>
    <string name="volumen_cubo">Volumen del Cubo</string>

    <string name="operaciones">Operaciones Realizadas</string>
    <string name="numero">No.</string>
    <string name="operacion">Operación</string>
    <string name="datos">Datos</string>
    <string name="base">Base</string>
    <string name="altura">Altura</string>
    <string name="radio">Radio</string>
    <string name="arista">Arista</string>


    <string-array name="opciones">
        <item>@string/opcion_areas</item>
        <item>@string/opcion_volumenes</item>
        <item>@string/opcion_operacionesRealizadas</item>
    </string-array>
    <string-array name="opcionesAreas">
        <item>@string/opcion_cuadrado</item>
        <item>@string/opcion_rectangulo</item>
        <item>@string/opcion_triangulo</item>
        <item>@string/opcion_circulo</item>
    </string-array>
    <string-array name="opcionesVolumenes">
        <item>@string/opcion_esfera</item>
        <item>@string/opcion_cilindro</item>
        <item>@string/opcion_cono</item>
        <item>@string/opcion_cubo</item>
    </string-array>
</resources>
