<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListarOperaciones">

    <TextView
        android:id="@+id/lbltituloOperaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:gravity="center_horizontal"
        android:text="@string/operaciones"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tblOperaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/flEnunciados"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblOperacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operacion"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblDatos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datos"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

</LinearLayout>